# axum-template

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/config/: log.rs  mod.rs
src/handler/: json.rs  mod.rs
