[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1"
anyhow = "1"

tokio = { version = "*", features = ["full"] }

axum = "0.6"
axum-extra = "0.8"
tower-http = { version = "0.4", features = ["cors"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
basic-toml = "0.1"

time = { version = "0.3", features = ["macros"] }


[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
